<resources>
    <string name="app_name">Test4</string>
    <string name="action_settings">Settings</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="start_office_time">Start Office Time</string>
    <string name="end_office_time">End Office Time</string>
    <string name="set_period">Set period</string>
    <string name="working_day">Working day</string>
    <string name="title_activity_start_office">StartOfficeActivity</string>
    <string name="title_activity_end_office">EndOfficeActivity</string>
    <string name="title_activity_set_period">SetPeriodActivity</string>
    <string name="title_activity_workingday">WorkingdayActivity</string>

    <string name="thirtymin">30 minutes</string>
    <string name="fourtymin">40 minutes</string>
    <string name="fiftymin">50 minutes</string>
    <string name="hour">1 hour</string>
    <string name="a_hour_and_ten">1 hour 10 minutes</string>
    <string name="a_hour_and_twenty">1 hour 20 minutes</string>
    <string name="a_hour_haft">1 hour 30 minutes</string>
    <string name="two_hours">2 hours</string>
</resources>
