<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"


    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_set_period"
    tools:context="com.example.nu.test4.SetPeriodActivity">
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/headBarr"
        android:scrollbarSize="10dp"
        android:scrollbarStyle="insideInset"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fillViewport="false">
        <LinearLayout
            android:id="@+id/layoutScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"
                android:background="#22000000"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/thirtymin"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />




            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"


                android:background="#22000000"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/fourtymin"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"


                android:background="#22000000"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/fiftymin"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"


                android:background="#22000000"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/hour"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"
                android:background="#22000000"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/a_hour_and_ten"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"


                android:background="#22000000"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/a_hour_and_twenty"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"


                android:background="#22000000"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/a_hour_haft"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gapheight"


                android:background="#22000000"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/two_hours"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />


            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
